--- a/webhook.mdx
+++ b/webhook.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Fluxo de uso'
+title: 'Webhook'
 description: 'Learn how to preview changes locally'
-icon: "list-radio"
+icon: "webhook"
 ---
 
 <Info>
