--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,72 +1,45 @@
 ---
 title: Introdução
-description: 'Welcome to the home of your new documentation'
+description: 'Bem-vindo ao Scanify! Aqui você encontra tudo o que precisa para começar a usar a nossa API.'
 icon: "circle-play"
 ---
 
 <img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
+  className="block"
+  src="/images/hero-dark-1.svg"
   alt="Hero Dark"
 />
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+O Scanify é uma API de [OCR (Reconhecimento Óptico de Caracteres)](ocr) criada para simplificar o processo de extração de texto de documentos digitalizados, proporcionando uma maneira rápida e automatizada de transformar documentos físicos em dados processáveis.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Fluxo de uso"
+    icon="list-radio"
+    href="flow"
   >
-    Get your docs set up locally for easy development
+    Entenda como é simples o fluxo de uso da API Scanify
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="Autenticação"
+    icon="shield-keyhole"
+    href="authentication"
   >
-    Preview your changes before you push to make sure they're perfect
+    Faça a autenticação e comece a fazer requisições à API
+  </Card>
+  <Card
+    title="Webhooks"
+    icon="webhook"
+    href="webhook"
+  >
+    Receba notificações quando um documento for processado
+  </Card>
+  <Card
+    title="Endpoints"
+    icon="brackets-curly"
+    href="api-reference/endpoint/auth"
+  >
+    Utilize os endpoints disponíveis para processar documentos
   </Card>
 </CardGroup>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
