--- a/webhook.mdx
+++ b/webhook.mdx
@@ -1,98 +1,61 @@
 ---
 title: 'Webhook'
-description: 'Learn how to preview changes locally'
+description: 'Aprenda a configurar webhooks para receber notificações automáticas do Scanify'
 icon: "webhook"
 ---
 
 <Info>
-  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding.
+  **Pré-requisito**: Certifique-se de que sua conta está configurada para receber webhooks e de que você possui uma URL pública para receber notificações.
 </Info>
 
-Step 1. Install Mintlify on your OS:
+## Introdução
 
-<CodeGroup>
+O Scanify permite que você receba notificações automáticas de conclusão de OCR por meio de webhooks. Ao configurar um webhook, você será notificado assim que o processamento do OCR estiver concluído, sem necessidade de consultar continuamente o status.
 
-```bash npm
-npm i -g mintlify
+
+## Configuração de webhook
+
+Para uma configuração mais simples, você pode utilizar o painel do Scanify para configurar o webhook.
+
+1. Acesse o Painel do Scanify:
+    - Navegue até a seção **Configurações** > **Webhooks** no painel da sua conta.
+2. Adicione a URL de Notificação:
+    - No campo de URL, insira o endereço do seu servidor onde deseja receber as notificações do webhook. Exemplo: `https://seuservidor.com/ocr/callback`.
+3. Escolha o Evento:
+    - Selecione o evento disponível na lista (atualmente, o único evento disponível é `job_completed` para notificação ao término do processamento de OCR).
+4. Salve as Configurações:
+    - Clique em **Salvar** para confirmar a configuração do webhook. 
+    - Você verá uma mensagem de confirmação indicando que o webhook foi configurado com sucesso.
+
+<Frame> <img src="/images/webhook-setup.png" style={{ borderRadius: '0.5rem' }} /> </Frame>
+<Warning>
+  **Nota**: Uma vez configurado pelo painel, o Scanify automaticamente enviará notificações para o URL salvo assim que um documento for processado.
+</Warning>
+
+## Recebimento de notificação
+
+Assim que o OCR for concluído, o Scanify enviará uma requisição `POST` para o URL do webhook configurado, incluindo o `jobId`, o `status` do processamento e o `text` (conteúdo extraído).
+
+Exemplo de Payload de Notificação:
+
+```json
+{
+  "jobId": "123456",
+  "status": "completed",
+  "text": "Conteúdo extraído aqui..."
+}
 ```
 
-```bash yarn
-yarn global add mintlify
-```
+<Info>
+  **Nota**: O status poderá ser `completed` ou `failed`. No caso de falha, o campo `text` pode estar ausente ou incluir uma mensagem de erro.
+</Info>
 
-</CodeGroup>
+## Resolução de Problemas
 
-Step 2. Go to the docs are located (where you can find `mint.json`) and run the following command:
+Confira abaixo algumas soluções para problemas comuns relacionados à configuração e recebimento de notificações de webhook:
 
-```bash
-mintlify dev
-```
-
-The documentation website is now available at `http://localhost:3000`.
-
-### Custom Ports
-
-Mintlify uses port 3000 by default. You can use the `--port` flag to customize the port Mintlify runs on. For example, use this command to run in port 3333:
-
-```bash
-mintlify dev --port 3333
-```
-
-You will see an error like this if you try to run Mintlify in a port that's already taken:
-
-```md
-Error: listen EADDRINUSE: address already in use :::3000
-```
-
-## Mintlify Versions
-
-Each CLI is linked to a specific version of Mintlify. Please update the CLI if your local website looks different than production.
-
-<CodeGroup>
-
-```bash npm
-npm i -g mintlify@latest
-```
-
-```bash yarn
-yarn global upgrade mintlify
-```
-
-</CodeGroup>
-
-## Deployment
-
-<Tip>
-  Unlimited editors available under the [Pro
-  Plan](https://mintlify.com/pricing) and above.
-</Tip>
-
-You should see the following if the deploy successfully went through:
-
-<Frame>
-  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} />
-</Frame>
-
-## Troubleshooting
-
-Here's how to solve some common problems when working with the CLI.
-
-<AccordionGroup>
-  <Accordion title="Mintlify is not loading">
-    Update to Node v18. Run `mintlify install` and try again.
-  </Accordion>
-  <Accordion title="No such file or directory on Windows">
-Go to the `C:/Users/Username/.mintlify/` directory and remove the `mint`
-folder. Then Open the Git Bash in this location and run `git clone
-https://github.com/mintlify/mint.git`.
-
-Repeat step 3.
-
-  </Accordion>
-  <Accordion title="Getting an unknown error">
-    Try navigating to the root of your device and delete the ~/.mintlify folder.
-    Then run `mintlify dev` again.
-  </Accordion>
+<AccordionGroup> 
+  <Accordion title="Webhook não está recebendo notificações"> Verifique se o URL configurado está acessível publicamente e responde corretamente. Certifique-se de que o servidor está configurado para aceitar requisições `POST`. </Accordion> 
+  <Accordion title="Erro 401 - Unauthorized ao configurar webhook"> Esse erro indica que o token JWT pode estar ausente ou incorreto. Verifique se o cabeçalho `Authorization` está correto e que o token JWT ainda é válido. </Accordion> 
+  <Accordion title="Notificação de webhook não foi recebida"> Verifique os logs do servidor para confirmar que ele está recebendo a notificação. Certifique-se também de responder com `200 OK` para evitar tentativas de reenvio. </Accordion> 
 </AccordionGroup>
-
-Curious about what changed in a CLI version? [Check out the CLI changelog.](/changelog/command-line)
