--- a/authentication.mdx
+++ b/authentication.mdx
@@ -1,98 +1,53 @@
 ---
 title: 'Autenticação'
-description: 'Learn how to preview changes locally'
+description: 'Saiba como autenticar-se na API do Scanify para acessar os endpoints protegidos'
 icon: 'shield-keyhole'
 ---
 
 <Info>
-  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding.
+  **Pré-requisito**: Antes de iniciar, obtenha sua chave de API na plataforma do Scanify.
 </Info>
 
-Step 1. Install Mintlify on your OS:
+## Obtenha o Token de Acesso JWT
 
-<CodeGroup>
+Para acessar os endpoints protegidos do Scanify, é necessário gerar um token de acesso JWT usando a sua chave de API.
 
-```bash npm
-npm i -g mintlify
-```
-
-```bash yarn
-yarn global add mintlify
-```
-
-</CodeGroup>
-
-Step 2. Go to the docs are located (where you can find `mint.json`) and run the following command:
 
 ```bash
-mintlify dev
+curl -X POST https://api.scanify.com.br/auth/token \
+  -H "Content-Type: application/json" \
+  -d '{
+    "apiKey": "sua-chave-de-api"
+  }'
 ```
 
-The documentation website is now available at `http://localhost:3000`.
+<Warning>
+  **Nota**: O token tem um tempo de expiração. Após esse período, você precisará solicitar um novo token.
+</Warning>
 
-### Custom Ports
+## Autentique-se nas Requisições
 
-Mintlify uses port 3000 by default. You can use the `--port` flag to customize the port Mintlify runs on. For example, use this command to run in port 3333:
+Inclua o token JWT no header `Authorization` de cada requisição aos endpoints protegidos da API:
 
 ```bash
-mintlify dev --port 3333
+curl -X GET https://api.scanify.com.br/ocr/upload \
+  -H "Authorization: Bearer seu-jwt-token"
 ```
 
-You will see an error like this if you try to run Mintlify in a port that's already taken:
+## Renovação do Token
 
-```md
-Error: listen EADDRINUSE: address already in use :::3000
-```
+Para renovar o token, basta refazer o passo 1 sempre que o token expirar. Recomenda-se configurar o sistema para capturar o tempo de expiração (`expiresIn`) e gerar um novo token quando o atual estiver próximo de expirar.
 
-## Mintlify Versions
+## Resolução de Problemas
 
-Each CLI is linked to a specific version of Mintlify. Please update the CLI if your local website looks different than production.
+Confira abaixo algumas soluções para problemas comuns relacionados à autenticação na API do Scanify:
 
-<CodeGroup>
-
-```bash npm
-npm i -g mintlify@latest
-```
-
-```bash yarn
-yarn global upgrade mintlify
-```
-
-</CodeGroup>
-
-## Deployment
-
-<Tip>
-  Unlimited editors available under the [Pro
-  Plan](https://mintlify.com/pricing) and above.
-</Tip>
-
-You should see the following if the deploy successfully went through:
-
-<Frame>
-  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} />
-</Frame>
-
-## Troubleshooting
-
-Here's how to solve some common problems when working with the CLI.
-
-<AccordionGroup>
-  <Accordion title="Mintlify is not loading">
-    Update to Node v18. Run `mintlify install` and try again.
-  </Accordion>
-  <Accordion title="No such file or directory on Windows">
-Go to the `C:/Users/Username/.mintlify/` directory and remove the `mint`
-folder. Then Open the Git Bash in this location and run `git clone
-https://github.com/mintlify/mint.git`.
-
-Repeat step 3.
-
-  </Accordion>
-  <Accordion title="Getting an unknown error">
-    Try navigating to the root of your device and delete the ~/.mintlify folder.
-    Then run `mintlify dev` again.
-  </Accordion>
+<AccordionGroup> 
+  <Accordion title="Erro 401 - Unauthorized"> Esse erro indica que o token JWT está ausente, incorreto, ou expirado. Verifique se o cabeçalho `Authorization` está sendo enviado corretamente e, se necessário, gere um novo token. </Accordion> 
+  <Accordion title="Token Expirado"> O token JWT tem uma validade limitada (especificada no campo `expiresIn` da resposta). Para resolver, gere um novo token através do endpoint `/auth/token`. </Accordion> 
+  <Accordion title="Acesso Negado ao Endpoint"> Certifique-se de que está utilizando o token JWT correto para os endpoints que requerem autenticação e que o cabeçalho `Authorization` está no formato adequado: `Bearer seu-jwt-token`. </Accordion> 
 </AccordionGroup>
 
-Curious about what changed in a CLI version? [Check out the CLI changelog.](/changelog/command-line)
+<Info>
+  Para mais informações, consulte a [documentação do endpoint de autenticação](https://scanify.com.br/api-reference/endpoint/auth).
+</Info>
