--- a/plans.mdx
+++ b/plans.mdx
@@ -1,86 +1,75 @@
 ---
 title: 'Planos e preços'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Conheça os planos de preços do Scanify e escolha a melhor opção para suas necessidades de OCR'
+icon: "credit-card"
 ---
 
-## Setup your development
+## Planos e Preços
 
-Learn how to update your docs locally and deploy them to the public.
+O Scanify oferece uma variedade de planos para atender às necessidades de diferentes perfis de uso, desde testes iniciais até grandes volumes de processamento de OCR. 
+Confira abaixo os planos disponíveis e escolha aquele que melhor atende suas necessidades.
 
-### Edit and preview
+<Info>Todos os planos incluem suporte básico e acesso à documentação completa da API.</Info>
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
-  </Accordion>
-</AccordionGroup>
+### Plano Gratuito (Free)
 
-### Deploy your changes
+Ideal para pequenos negócios ou usuários que desejam experimentar o serviço.
 
-<AccordionGroup>
+- **Limite**: 100 requisições de OCR por mês
+- **Funcionalidades Incluídas**:
+    - Processamento individual de documentos
+- **Preço**: R$ 0,00/mês
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+### Plano Básico
 
-</AccordionGroup>
+Voltado para pequenas empresas com uso moderado de OCR.
 
-## Update your docs
+- **Limite**: 1.000 requisições de OCR por mês
+- **Funcionalidades Incluídas**:
+    - Processamento individual de documentos
+    - Configuração de webhook
+- **Preço**: R$ 49,00/mês
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+### Plano Profissional
 
-<CardGroup>
+Perfeito para empresas de médio porte que precisam de OCR regularmente.
 
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
+- **Limite**: 5.000 requisições de OCR por mês
+- **Funcionalidades Incluídas**:
+    - Processamento individual e em lote
+    - Configuração de webhook
+- **Preço**: R$ 149,00/mês
 
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
+### Plano Corporativo
 
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
+Ideal para grandes empresas com alta demanda de OCR.
 
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
+- **Limite**: 20.000 requisições de OCR por mês
+- **Funcionalidades Incluídas**:
+    - Processamento individual e em lote
+    - Configuração de webhook
+    - Suporte prioritário
+- **Preço**: R$ 499,00/mês
 
-</CardGroup>
+### Pay-as-you-go (Pagamento por Uso)
+
+Para empresas com uso variável de OCR, oferecemos a opção de pagamento por uso.
+
+- **Preço por Requisição**: R$ 0,12 por requisição
+- **Limite mínimo mensal**: R$ 50,00
+- **Funcionalidades Incluídas**:
+    - Processamento individual de documentos
+    - Configuração de webhook
+
+
+### Comparação de Planos
+
+| Plano             | Requisições/Mês  | Funcionalidades                              | Preço                 |
+|-------------------|------------------------|----------------------------------------------|-----------------------|
+| **Gratuito**      | 100 req/mês    | Processamento individual                    | R$ 0,00/mês          |
+| **Básico**        | 1.000 req/mês  | Processamento individual, webhook           | R$ 49,00/mês         |
+| **Profissional**  | 5.000 req/mês  | Processamento em lote, webhook              | R$ 149,00/mês        |
+| **Corporativo**   | 20.000 req/mês | Suporte prioritário, processamento em lote  | R$ 499,00/mês        |
+| **Pay-as-you-go** | Variável               | Processamento individual, webhook           | R$ 0,12/requisição |
+
+<Tip> Para assinaturas anuais, oferecemos um desconto de 10%. [Entre em contato com nosso suporte para mais detalhes](https://wa.me/5575991206853).</Tip>
