--- a/introduction.mdx
+++ b/introduction.mdx
@@ -6,8 +6,8 @@ icon: "circle-play"
 
 <img
   className="block"
-  src="/images/hero-dark-1.svg"
-  alt="Hero Dark"
+  src="/images/hero.svg"
+  alt="Hero"
 />
 
 O Scanify é uma API de [OCR (Reconhecimento Óptico de Caracteres)](ocr) criada para simplificar o processo de extração de texto de documentos digitalizados, proporcionando uma maneira rápida e automatizada de transformar documentos físicos em dados processáveis.
