--- a/introduction.mdx
+++ b/introduction.mdx
@@ -10,7 +10,9 @@ icon: "circle-play"
   alt="Hero"
 />
 
-O Scanify é uma API de [OCR (Reconhecimento Óptico de Caracteres)](ocr) criada para simplificar o processo de extração de texto de documentos digitalizados, proporcionando uma maneira rápida e automatizada de transformar documentos físicos em dados processáveis.
+O Scanify é uma API que extrai e **valida dados de documentos brasileiros**, como boletos e notas fiscais eletrônicas (NF-e).
+
+Você envia um PDF ou imagem, e recebe os dados estruturados, validados e prontos para automações, IA ou integração com sistemas.
 
 <CardGroup cols={2}>
   <Card
@@ -18,7 +20,7 @@ O Scanify é uma API de [OCR (Reconhecimento Óptico de Caracteres)](ocr) criada
     icon="list-radio"
     href="flow"
   >
-    Entenda como é simples o fluxo de uso da API Scanify
+    Entenda como é simples o fluxo de uso da API do Scanify
   </Card>
   <Card
     title="Autenticação"
@@ -32,7 +34,7 @@ O Scanify é uma API de [OCR (Reconhecimento Óptico de Caracteres)](ocr) criada
     icon="webhook"
     href="webhook"
   >
-    Receba notificações quando um documento for processado
+    Receba os dados processados em formato JSON diretamente no seu sistema
   </Card>
   <Card
     title="Endpoints"
