Atualiza a documentação da API do Scanify, renomeando seções e endpoints, além de reorganizar a estrutura de navegação. Remove arquivos obsoletos relacionados à autenticação e status de OCR, e adiciona uma nova página de changelog para acompanhar atualizações e melhorias.

--- a/api-reference/endpoint/ocr-upload.mdx
+++ b/api-reference/endpoint/ocr-upload.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Upload do arquivo'
-openapi: 'POST /ocr/upload'
+title: 'Extração de dados'
+openapi: 'POST /extract'
 icon: "arrow-up-from-bracket"
 ---
